themes/main/src/sass/national.scss
@import '_helpers/colors';
@import '_helpers/query';
@import '_helpers/mixins';
@import '_helpers/constants';

#home {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 2 * $COLUMN-WIDTH;
  @include column-lateral-spacing(10px);
  @include site-lateral-spacing();
  @include get-font(NATIONAL);

  @include media-query (THREE){
    flex-wrap: nowrap;
    max-width: 3 * $COLUMN-WIDTH;
    padding-left: 0;
    padding-right: 0;
  }

  @include media-query (FOUR){
    max-width: 4 * $COLUMN-WIDTH;
  }

  @include media-query(FIVE) {
    max-width: 5 * $COLUMN-WIDTH;
  }

  .container {
    display: flex;
  }
}

#home {
  #last-news-dynamic {
    order: -11;
  }

  #featured-1 {
    order: -10;
  }

  #featured-2 {
    order: -9;
  }

  #featured-3 {
    order: -8;

    @include media-query(FOUR){
      order: -7;
    }

    @include media-query(FIVE){
      order: -8;
    }
  }

  #featured-text-container {
    display: flex;
    flex-wrap: wrap;
    order: -7;

    @include media-query(FOUR){
      width: 2 * $COLUMN-WIDTH;
      order: -8;
    }

    @include media-query(FIVE){
      width: 4 * $COLUMN-WIDTH;
      order: -7;
    }
  }

  #videos {
    order: -6;
  }

  #images {
    order: -5;

    @include media-query(FOUR){
      order: -4;
    }

    @include media-query(FIVE){
      order: -5;
    }
  }

  #featured-7 {
    order: -4;

    @include media-query(FOUR){
      order: -5;
    }

    @include media-query(FIVE){
      order: -4;
    }
  }

  #featured-8 {
    order: -3;
  }
}

.spacing {
  margin-bottom: $VERTICAL-SPACE;
}

#home .main {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  align-content: flex-start;

  @include media-query (THREE){
    width: 2 * $COLUMN-WIDTH;
    flex-flow: row wrap;
  }
  @include media-query (FOUR){
    width: 3 * $COLUMN-WIDTH;
  }
  @include media-query (FIVE){
    width: 4 * $COLUMN-WIDTH;
  }

  .divisor + .divisor {
    border-top: 1px solid $content-divisor;
    padding-top: $VERTICAL-SPACE;

    @include media-query(THREE){
      border-top: 0;
      padding-top: 0;
    }
  }

  .description{
    margin-top: 10px;
  }

  .radar, .columnists {
      @include media-query(THREE) {
        display: none;
      }
  }

  .printed-news{
    width: 100%;

    @include media-query(THREE) {
      display: none;
    }
  }

  iframe {
    width: 100%;
    height: 263px;

    @include media-query(THREE){
      height: 337px;
    }
  }
}

#home .featured-big-picture {
  width: 100%;
  @include picture-with-caption();
  @include image-rounded-responsive(300px);

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }
}

#home .featured-small-picture {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  @include image-rounded(150px, 150px);

  @include media-query(THREE) {
    width: $COLUMN-WIDTH;
    @include image-rounded(220px, 150px);
    @include column-lateral-spacing();
  }

  .title {
    display: inline-block;
    position: absolute;
    width: 50%;
    max-width: 270px;
    padding-right: 10px;
    padding-left: 10px;

    @include media-query(THREE) {
      position: relative;
      width: 100%;
      border-left: 3px solid $vertical-bar;
      padding-left: 10px;
      margin-top: $VERTICAL-SPACE;
    }
  }

  figure {
    display: inline-block;
  }
}

#home .featured-text-and-title{
  width: 100%;

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .description {
    padding-left: 13px;
    margin-top: 5px;
  }
}

#home .box-container {
  display: flex;

  @include media-query(THREE){
    width: $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  .featured-text-box {
    background-color: $box-background;
    border-top: 3px solid $box-border;
    padding: 10px;
  }
}

#home .article-footer {
  width: 50%;
  @include image-rounded(100%, 150px);

  @include media-query (THREE){
    width: $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .hat{
    @include section-name();
  }

  img{
    border-radius: 5px;
    width: 100%;
  }
}

.article-footer + .article-footer {
  padding-left: 10px;
}

#home .gallery-images .gallery-mobile-smaller {
  display: flex;
  justify-content: center;
  @include media-query(THREE){
    display: none;
  }
}

#home .gallery-images .gallery-mobile {
  display: none;
  @include media-query(MOBILE){
    display: flex;
    justify-content: center;
  }
  @include media-query(THREE){
    display: none;
  }
}

#home .gallery-images .gallery-desktop {
  display: none;
  @include media-query(THREE){
    display: inline-block;
  }
}

#home .gallery-videos {
  iframe, img, a{
    height: 206px;
    width: 100%;

    @include media-query(MOBILE){
      height: 263px;
    }

    @include media-query(THREE){
      height: 337px;
    }
  }
}

#home .gallery-images, .gallery-videos{
  width: 2 * $COLUMN_WIDTH;
  @include column-lateral-spacing();

  .section-name {
    @include section-name();
  }
}

#home .photo-caption {
  @include picture-with-caption();
  @include image-rounded-responsive(300px);
  width: 100%;

  .section-name {
    @include section-name();
  }

  @include media-query(THREE) {
    @include column-lateral-spacing();
  }

  @include media-query(FOUR) {
    @include image-rounded-responsive(450px);
  }

  @include media-query(FIVE){
    @include image-rounded-responsive(300px);
    width: 2 * $COLUMN-WIDTH;
  }

  p {
    padding-top: 10px;
  }
}

#home .most-read, .last-news#last-news-mobile {
  width: 100%;
  @include column-lateral-spacing();

  .section-name {
    @include section-name();
  }

  ol {
    counter-reset: li;
    margin: 15px 0 0 35px;
  }

  ol > li {
    list-style: none;
    margin-bottom: 5px;

    .title {
      display: inline;
    }
  }

  ol > li:before{
    content: counter(li) ".";
    counter-increment: li;
    margin: 0 10px 0 -30px;
  }
}

#home .last-news#last-news-mobile {
  @include media-query(THREE) {
    display: none;
  }
}

#home .last-news#last-news-dynamic {
  display: none;

  @include media-query(THREE) {
    width: 100%;
    padding : 5px 0;
    display: flex;
    @include column-lateral-spacing();

    .section-name {
      white-space: nowrap;
    }

    ol > li {
      list-style: none;
      padding-left: 10px;
    }

    .inactive {
      display: none;
    }
  }
}


#home .sidebar {
  display: none;

  @include media-query(THREE) {
    display: inline-block;
    width: $COLUMN-WIDTH;
    @include column-lateral-spacing();
  }

  section + section {
    margin-top: $VERTICAL-SPACE;
  }
}

#home figure.radar {
  margin-top: $VERTICAL-SPACE;

  img {
    width: 100%;
  }

  @include media-query(THREE) {
    margin-top: 0;
  }
}

#home .printed-news {
  display: flex;
  flex-direction: column;

  .section-name {
    @include section-name();
  }

  img {
    width: 220px;
    margin: 0 auto;
  }

  .button {
    color: $red-base;
    font-family: 'Merriweather Sans', serif;
    border: 1px solid #b7b7b7;
    border-radius: 3px;
    box-shadow: 0px 1px 1px #b7b7b7;
    font-weight: bold;
    padding: 8px 0;
    text-align: center;
    font-size: 16px;
    width: 100%;
    margin: 5px auto;
    @include media-query (THREE) {
      width: 200px;
    }
  }

  .button:hover {
    box-shadow: 1px 2px 1px #b7b7b7;
    color:$red-light;
  }
}

#home .columnists {
  .section-name {
    @include section-name();
  }

  img{
    border-radius: 50%;
    height: 80px;
    max-width: 80px;
    align-self: center;

    @include media-query(THREE) {
      height: 60px;
      max-width: 60px;
    }
  }

  .title {
    margin-top: 5px;
  }

  .columnist + .columnist {
    margin-top: 20px;
  }

  .column {
    margin-left: 10px;
  }

  .columnist {
    display: flex;
    margin-top: 20px;
  }

  .button {
    display: block;
    border: 1px solid #b7b7b7;
    border-radius: 3px;
    box-shadow: 0px 1px 1px #b7b7b7;
    padding: 8px 0;
    text-align: center;
    font-size: 16px;
    width: 100%;
    margin: 20px auto;
    @include media-query (THREE) {
      width: 200px;
    }

    &:visited {
      box-shadow: 1px 2px 1px #b7b7b7;
    }

    &:hover {
      box-shadow: 1px 2px 1px #b7b7b7;
    }
  }

}

